Fixed header issue in Xelatex for TD-4729(Guidewords in headers are missing in Xelatex)

--- a/src/Test/XeLatex/TestFiles/Expected/GautamiFontTest.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/GautamiFontTest.tex
@@ -128,9 +128,7 @@
 \begin{multicols}{2}\begin{spacing}{0.458333333333333}{\raggedright} \begin{spacing}{0.458333333333333}
 \hangindent= 12pt
 \hangafter=1
-\markboth{ \headwordggoTeluINentryletDatadicBody అరిల్
-                    బోయిండ}{ \headwordggoTeluINentryletDatadicBody అరిల్
-                    బోయిండ}\headwordggoTeluINentryletDatadicBody{అరిల్ బోయిండ} \headwordggoTeluINentryletDatadicBody{}\spanenpronunciationggofonipaxemicpronunciationsentryletDatadicBody{[}\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody{aril bōyiṇḍa}\spanenpronunciationggofonipaxemicpronunciationsentryletDatadicBody{]} \begin{spacing}{0.5}
+\headwordggoTeluINentryletDatadicBody{అరిల్ బోయిండ} \headwordggoTeluINentryletDatadicBody{}\spanenpronunciationggofonipaxemicpronunciationsentryletDatadicBody{[}\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody{aril bōyiṇḍa}\spanenpronunciationggofonipaxemicpronunciationsentryletDatadicBody{]} \begin{spacing}{0.5}
 
 \spanenpartofspeechengrammaticalinfosensesensesentryletDatadicBody{num} \grammaticalinfosensesensesentryletDatadicBody{}\spanendefinitionensensesensesentryletDatadicBody{ninety-eight.} \spanenLexSensepublishStemDefinitionPubensensesensesentryletDatadicBody{ninety-eight.} \spanenxitemenLexSensepublishStemGlossPubLcensensesensesentryletDatadicBody{ninety-eight}\spanhixitemhiLexSensepublishStemGlossPubLcensensesensesentryletDatadicBody{अट्‌ठानवे}\spantexitemteLexSensepublishStemGlossPubLcensensesensesentryletDatadicBody{(98) తొంభై ఎనిమిది}\exampleggoTeluINexamplessensesensesentryletDatadicBody{}\spanggoTeluINexampleggoTeluINexamplessensesensesentryletDatadicBody{మా కాలెజ్ నగ అట్యనొవ్ కాండిర్కున్ స్కాలర్ సిప్ కొత్తంగ్ వాతంగ్.} \exampleggoTeluINexamplessensesensesentryletDatadicBody{}\spanenCmPossibilitypublishStemTransTypeAbbreviationPubenCmTranslationpublishStemTypeConfigtranslationsexamplessensesensesentryletDatadicBody{FT}\spanenCmPossibilitypublishStemTransTypeNamePubenCmTranslationpublishStemTypeConfigtranslationsexamplessensesensesentryletDatadicBody{[}\spanenCmPossibilitypublishStemTransTypeNamePubenCmTranslationpublishStemTypeConfigtranslationsexamplessensesensesentryletDatadicBody{Free translation}\spanenCmPossibilitypublishStemTransTypeNamePubenCmTranslationpublishStemTypeConfigtranslationsexamplessensesensesentryletDatadicBody{]} \spantetranslationLdtetranslationsexamplessensesensesentryletDatadicBody{మా కాలేజి లొ తొంభై ఎనిమిది మంది పిల్లలకు స్కాలర్ సిప్ డబ్బులు వచ్చినాయి.} \spanensemanticdomainssensesensesentryletDatadicBody{(sem. domains: }\spanensemanticdomainabbrensemanticdomainssensesensesentryletDatadicBody{8.1.1.1}\spanensemanticdomainabbrensemanticdomainssensesensesentryletDatadicBody{ - }\spanensemanticdomainnameensemanticdomainssensesensesentryletDatadicBody{Cardinal numbers}\spanensemanticdomainssensesensesentryletDatadicBody{.) }\end{spacing}
 \begin{spacing}{0.5}
