--- a/src/Test/XeLatex/TestFiles/Expected/HashSymbol.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/HashSymbol.tex
@@ -75,8 +75,6 @@
 \spanenpictureLabelenpictureCaptionpictureRightentryletDatadicBody{rice with tumeric}
 
 
-
-\hangindent= 36pt
-\hangafter=1\markboth{ \headwordggoTeluxINentryletDatadicBody అక్సెదంగ్}{ \headwordggoTeluxINentryletDatadicBody అక్సెదంగ్}\headwordggoTeluxINentryletDatadicBody{అక్సెదంగ్}\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody{aksedaṅg}\spanenpartofspeechengrammaticalinfosensesensesentryletDatadicBody{n}\xsensenumbersensesentryletDatadicBody{1}\spanendefinitionensensesensesentryletDatadicBody{rice with vermilion}\spanenLexSensepublishStemGlossPubensensesensesentryletDatadicBody{rice with vermilion}\xsensenumbersensesentryletDatadicBody{2}\spanendefinitionensensesensesentryletDatadicBody{rice mixed with vermilion thrown at a wedding, or on cattle (e.g. during 'laxmi pooja') in order to bless.}\spanenLexSensepublishStemGlossPubensensesensesentryletDatadicBody{rice with turmeric used to bless}\spanggoTeluxINexampleggoTeluxINexamplessensesensesentryletDatadicBody{గొవుర్ దన్ గోటమ్నె నొవ్రి నొవ్రనగ సమ్దిర్ అక్సెదాంగ్ వాటంతెర్.}\spanenxitementranslationentranslationsexamplessensesensesentryletDatadicBody{At the wedding place, everyone throws rice on the bride andgroom.}\spantexitemtetranslationentranslationsexamplessensesensesentryletDatadicBody{$\sharp$పెండ్లి పందిరిలో పడుసు, వరులకు పసుపు బియ్యం వేస్తారు.}
+\headwordggoTeluxINentryletDatadicBody{అక్సెదంగ్}\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody{aksedaṅg}\spanenpartofspeechengrammaticalinfosensesensesentryletDatadicBody{n}\xsensenumbersensesentryletDatadicBody{1}\spanendefinitionensensesensesentryletDatadicBody{rice with vermilion}\spanenLexSensepublishStemGlossPubensensesensesentryletDatadicBody{rice with vermilion}\xsensenumbersensesentryletDatadicBody{2}\spanendefinitionensensesensesentryletDatadicBody{rice mixed with vermilion thrown at a wedding, or on cattle (e.g. during 'laxmi pooja') in order to bless.}\spanenLexSensepublishStemGlossPubensensesensesentryletDatadicBody{rice with turmeric used to bless}\spanggoTeluxINexampleggoTeluxINexamplessensesensesentryletDatadicBody{గొవుర్ దన్ గోటమ్నె నొవ్రి నొవ్రనగ సమ్దిర్ అక్సెదాంగ్ వాటంతెర్.}\spanenxitementranslationentranslationsexamplessensesensesentryletDatadicBody{At the wedding place, everyone throws rice on the bride andgroom.}\spantexitemtetranslationentranslationsexamplessensesensesentryletDatadicBody{$\sharp$పెండ్లి పందిరిలో పడుసు, వరులకు పసుపు బియ్యం వేస్తారు.}
 
 \end{document}
