--- a/src/Test/XeLatex/TestFiles/Expected/TwoColumnInputCase.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/TwoColumnInputCase.tex
@@ -91,12 +91,10 @@
 \spanenpictureLabelenpictureCaptionpictureRightentryletDatadicBody{rice with tumeric}
 \end{center}
 
-
-\hangindent= 12pt
-\hangafter=1\markboth{ \headwordggoTeluINentryletDatadicBody అక్సెదంగ్}{ \headwordggoTeluINentryletDatadicBody అక్సెదంగ్}\headwordggoTeluINentryletDatadicBody{అక్సెదంగ్}\markboth{ \headwordggoTeluINentryletDatadicBody   }{ \headwordggoTeluINentryletDatadicBody   }\headwordggoTeluINentryletDatadicBody{ }\pronunciationggofonipaxemicpronunciationsentryletDatadicBody{[}\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody{aksedaṅg}\pronunciationggofonipaxemicpronunciationsentryletDatadicBody{]}\pronunciationsentryletDatadicBody{ }
+\headwordggoTeluINentryletDatadicBody{అక్సెదంగ్}\headwordggoTeluINentryletDatadicBody{ }\pronunciationggofonipaxemicpronunciationsentryletDatadicBody{[}\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody{aksedaṅg}\pronunciationggofonipaxemicpronunciationsentryletDatadicBody{]}\pronunciationsentryletDatadicBody{ }
 
 \hangindent= 12pt
 \hangafter=1
-\markboth{ \headwordggoTeluINentryletDatadicBody అక్సర్క్‌నె}{ \headwordggoTeluINentryletDatadicBody అక్సర్క్‌నె}\headwordggoTeluINentryletDatadicBody{అక్సర్క్‌నె}\markboth{ \headwordggoTeluINentryletDatadicBody   }{ \headwordggoTeluINentryletDatadicBody   }\headwordggoTeluINentryletDatadicBody{ }\pronunciationggofonipaxemicpronunciationsentryletDatadicBody{[}\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody{aksarkne}\pronunciationggofonipaxemicpronunciationsentryletDatadicBody{]}\pronunciationsentryletDatadicBody{ }\spanteLexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody{అచ్చరాలతో}\LexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody{ }\spanggoTeluINexampleggoTeluINexamplessensesensesentryletDatadicBody{గోండి బాసతున్ అక్సర్క్‌నె లిహి కీంతెర్.}\exampleggoTeluINexamplessensesensesentryletDatadicBody{ }\spantetranslationLdtetranslationsexamplessensesensesentryletDatadicBody{గోండిని అచ్చరాలలో రాసుకుంటారు.}\translationLdtetranslationsexamplessensesensesentryletDatadicBody{ }\examplessensesensesentryletDatadicBody{}\sensesentryletDatadicBody{}
+\headwordggoTeluINentryletDatadicBody{అక్సర్క్‌నె}\headwordggoTeluINentryletDatadicBody{ }\pronunciationggofonipaxemicpronunciationsentryletDatadicBody{[}\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody{aksarkne}\pronunciationggofonipaxemicpronunciationsentryletDatadicBody{]}\pronunciationsentryletDatadicBody{ }\spanteLexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody{అచ్చరాలతో}\LexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody{ }\spanggoTeluINexampleggoTeluINexamplessensesensesentryletDatadicBody{గోండి బాసతున్ అక్సర్క్‌నె లిహి కీంతెర్.}\exampleggoTeluINexamplessensesensesentryletDatadicBody{ }\spantetranslationLdtetranslationsexamplessensesensesentryletDatadicBody{గోండిని అచ్చరాలలో రాసుకుంటారు.}\translationLdtetranslationsexamplessensesensesentryletDatadicBody{ }\examplessensesensesentryletDatadicBody{}\sensesentryletDatadicBody{}
  \end{multicols}
 \end{document}
