TD-4733 ApplyPDFLincenseInfo stopped working

--- a/src/Test/XhtmlExport/TestFiles/Expected/NKOu3/NKOu3.tex
+++ b/src/Test/XhtmlExport/TestFiles/Expected/NKOu3/NKOu3.tex
@@ -44,18 +44,20 @@
 \font\spanbzh="Charis SIL/GR" at 12pt
 \font\divde="Times New Roman/GR" at 12pt
 \font\spande="Times New Roman/GR" at 12pt
-\font\diven="Times New Roman/GR" at 12pt
-\font\spanen="Times New Roman/GR" at 12pt
+\font\divenfonipa="Doulos SIL/GR" at 12pt
+\font\spanenfonipa="Doulos SIL/GR" at 12pt
+\font\diven="Charis SIL/GR" at 12pt
+\font\spanen="Charis SIL/GR" at 12pt
 \font\divesaab="Charis SIL AmArea/GR" at 12pt
 \font\spanesaab="Charis SIL AmArea/GR" at 12pt
-\font\dives="Times New Roman/GR" at 12pt
-\font\spanes="Times New Roman/GR" at 12pt
+\font\dives="Charis SIL/GR" at 12pt
+\font\spanes="Charis SIL/GR" at 12pt
 \font\divfa="Times New Roman/GR" at 12pt
 \font\spanfa="Times New Roman/GR" at 12pt
 \font\divfrZxxxxaudio="Charis SIL/GR" at 12pt
 \font\spanfrZxxxxaudio="Charis SIL/GR" at 12pt
-\font\divfr="Times New Roman/GR" at 12pt
-\font\spanfr="Times New Roman/GR" at 12pt
+\font\divfr="Charis SIL/GR" at 12pt
+\font\spanfr="Charis SIL/GR" at 12pt
 \font\divggofonipaxemic="Tahoma/GR" at 12pt
 \font\spanggofonipaxemic="Tahoma/GR" at 12pt
 \font\divggoINxaheri="Arial Unicode MS/GR" at 12pt
@@ -66,6 +68,8 @@
 \font\spangrc="Galatia SIL/GR" at 12pt
 \font\divhbo="Ezra SIL/GR" at 12pt
 \font\spanhbo="Ezra SIL/GR" at 12pt
+\font\divhe="Charis SIL/GR" at 12pt
+\font\spanhe="Charis SIL/GR" at 12pt
 \font\divhi="Arial Unicode MS/GR" at 12pt
 \font\spanhi="Arial Unicode MS/GR" at 12pt
 \font\divhu="Charis SIL/GR" at 12pt
@@ -92,6 +96,8 @@
 \font\spanmxbfonipa="Charis SIL AmArea/GR" at 12pt
 \font\divmxb="Charis SIL AmArea/GR" at 12pt
 \font\spanmxb="Charis SIL AmArea/GR" at 12pt
+\font\divmy="Times New Roman/GR" at 12pt
+\font\spanmy="Times New Roman/GR" at 12pt
 \font\divne="Charis SIL/GR" at 12pt
 \font\spanne="Charis SIL/GR" at 12pt
 \font\divpt="Times New Roman/GR" at 12pt
@@ -100,8 +106,8 @@
 \font\spanqaaxlel="Times New Roman/GR" at 12pt
 \font\divro="Charis SIL/GR" at 12pt
 \font\spanro="Charis SIL/GR" at 12pt
-\font\divru="Times New Roman/GR" at 12pt
-\font\spanru="Times New Roman/GR" at 12pt
+\font\divru="Charis SIL/GR" at 12pt
+\font\spanru="Charis SIL/GR" at 12pt
 \font\divsehfonipaxetic="Doulos SIL/GR" at 12pt
 \font\spansehfonipaxetic="Doulos SIL/GR" at 12pt
 \font\divsehfonipa="Doulos SIL/GR" at 12pt
@@ -120,10 +126,10 @@
 \font\spanth="Charis SIL/GR" at 12pt
 \font\divtpi="Andika Basic/GR" at 12pt
 \font\spantpi="Andika Basic/GR" at 12pt
-\font\divtrfonipaxemic="Times New Roman/GR" at 12pt
-\font\spantrfonipaxemic="Times New Roman/GR" at 12pt
-\font\divtrfonipa="Doulos SIL/GR" at 12pt
-\font\spantrfonipa="Doulos SIL/GR" at 12pt
+\font\divtrfonipaxemic="Charis SIL/GR" at 12pt
+\font\spantrfonipaxemic="Charis SIL/GR" at 12pt
+\font\divtrfonipa="Charis SIL/GR" at 12pt
+\font\spantrfonipa="Charis SIL/GR" at 12pt
 \font\divtr="Charis SIL/GR" at 12pt
 \font\spantr="Charis SIL/GR" at 12pt
 \font\divurArab="Scheherazade Graphite Alpha/GR" at 12pt
