TD-4723 In Xelatex, Paragraph breaking in export

--- a/src/Test/XeLatex/TestFiles/Expected/Counter3.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/Counter3.tex
@@ -21,27 +21,19 @@
 \setlength{\parfillskip}{0pt plus 1fil}
 \font\sectionletter="Times New Roman/GR" at 12pt
 \font\articlesectionletter="Times New Roman/GR/I" at 12pt
-\font\firstoftypesensearticlesectionletter="Times New Roman/GR/BI":color=ff0000 at 12pt
-\font\firstoftypegrammarcategorylastoftypefirstoftypesensearticlesectionletter="Times New Roman/GR/BI":color=ff0000 at 12pt
-\font\definitionfirstoftypelastoftypefirstoftypesensearticlesectionletter="Times New Roman/GR/BI":color=ff0000 at 12pt
-\font\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypefirstoftypesensearticlesectionletter="Times New Roman/GR/BI":color=ff0000 at 12pt
-\font\lastoftypesensearticlesectionletter="Times New Roman/GR/BI":color=ff0000 at 12pt
-\font\firstoftypegrammarcategorylastoftypelastoftypesensearticlesectionletter="Times New Roman/GR/BI":color=ff0000 at 12pt
-\font\definitionfirstoftypelastoftypelastoftypesensearticlesectionletter="Times New Roman/GR/BI":color=ff0000 at 12pt
-\font\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypelastoftypesensearticlesectionletter="Times New Roman/GR/BI":color=ff0000 at 12pt
-\font\examplefirstoftypelastoftypelastoftypesensearticlesectionletter="Times New Roman/GR/BI":color=ff0000 at 12pt
-\font\firstoftypelastoftypesubentryarticlesectionletter="Times New Roman/GR/I" at 12pt
-\font\firstoftypeheadwordlastoftypefirstoftypelastoftypesubentryarticlesectionletter="Times New Roman/GR/I" at 12pt
-\font\examplefirstoftypelastoftypefirstoftypelastoftypesubentryarticlesectionletter="Times New Roman/GR/I" at 12pt
-\font\firstoftypeheadwordlastoftypearticlesectionletter="Times New Roman/GR/I" at 12pt
-\font\firstoftypelastoftypepronunciationarticlesectionletter="Times New Roman/GR/I" at 12pt
-\font\firstoftypelastoftypestressfirstoftypelastoftypepronunciationarticlesectionletter="Times New Roman/GR/I" at 12pt
-\font\firstoftypevariantinflectionarticlesectionletter="Times New Roman/GR/I" at 12pt
+\font\sensearticlesectionletter="Times New Roman/GR/BI":color=ff0000 at 12pt
+\font\grammarcategoryfirstoftypesensearticlesectionletter="Times New Roman/GR/BI":color=ff0000 at 12pt
+\font\definitionfirstoftypesensearticlesectionletter="Times New Roman/GR/BI":color=ff0000 at 12pt
+\font\wordusefirstoftypedefinitionfirstoftypesensearticlesectionletter="Times New Roman/GR/BI":color=ff0000 at 12pt
+\font\examplefirstoftypesensearticlesectionletter="Times New Roman/GR/BI":color=ff0000 at 12pt
+\font\subentryfirstoftypearticlesectionletter="Times New Roman/GR/I" at 12pt
+\font\headwordfirstoftypesubentryfirstoftypearticlesectionletter="Times New Roman/GR/I" at 12pt
+\font\examplefirstoftypesubentryfirstoftypearticlesectionletter="Times New Roman/GR/I" at 12pt
+\font\headwordfirstoftypearticlesectionletter="Times New Roman/GR/I" at 12pt
+\font\pronunciationfirstoftypearticlesectionletter="Times New Roman/GR/I" at 12pt
+\font\stressfirstoftypepronunciationfirstoftypearticlesectionletter="Times New Roman/GR/I" at 12pt
 \font\variantinflectionarticlesectionletter="Times New Roman/GR/I" at 12pt
-\font\lastoftypevariantinflectionarticlesectionletter="Times New Roman/GR/I" at 12pt
-\font\exampleusefirstoftypelastoftypefirstoftypesensearticlesectionletter="Times New Roman/GR/BI":color=ff0000 at 12pt
-\font\examplefirstoftypelastoftypefirstoftypesensearticlesectionletter="Times New Roman/GR/BI":color=ff0000 at 12pt
-\font\exampleusefirstoftypelastoftypelastoftypesensearticlesectionletter="Times New Roman/GR/BI":color=ff0000 at 12pt
+\font\exampleusefirstoftypesensearticlesectionletter="Times New Roman/GR/BI":color=ff0000 at 12pt
 
 \mbox{} 
 \newpage 
@@ -50,6 +42,6 @@
 \pagenumbering{arabic} 
 \pagestyle{fancy} 
 
-\firstoftypesensearticlesectionletter{1.1}\firstoftypesensearticlesectionletter{1 }\firstoftypegrammarcategorylastoftypefirstoftypesensearticlesectionletter{N-Count}\definitionfirstoftypelastoftypefirstoftypesensearticlesectionletter{A }\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypefirstoftypesensearticlesectionletter{waitress}\definitionfirstoftypelastoftypefirstoftypesensearticlesectionletter{ is a woman who works in a restaurant, serving people with food and drink.}\lastoftypesensearticlesectionletter{1.2}\lastoftypesensearticlesectionletter{2 }\firstoftypegrammarcategorylastoftypelastoftypesensearticlesectionletter{Verb}\definitionfirstoftypelastoftypelastoftypesensearticlesectionletter{A woman who }\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypelastoftypesensearticlesectionletter{waitresses}\definitionfirstoftypelastoftypelastoftypesensearticlesectionletter{ works in a restaurant serving food and drink.}\examplefirstoftypelastoftypelastoftypesensearticlesectionletter{She had been working in a pub, cooking and waitressing.}\firstoftypegrammarcategorylastoftypelastoftypesensearticlesectionletter{Verb}\definitionfirstoftypelastoftypelastoftypesensearticlesectionletter{A woman who }\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypelastoftypesensearticlesectionletter{waitresses}\definitionfirstoftypelastoftypelastoftypesensearticlesectionletter{ works in a restaurant serving food and drink.}\examplefirstoftypelastoftypelastoftypesensearticlesectionletter{She had been working in a pub, cooking and waitressing.}\firstoftypegrammarcategorylastoftypelastoftypesensearticlesectionletter{Verb}\definitionfirstoftypelastoftypelastoftypesensearticlesectionletter{A woman who }\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypelastoftypesensearticlesectionletter{waitresses}\definitionfirstoftypelastoftypelastoftypesensearticlesectionletter{ works in a restaurant serving food and drink.}\examplefirstoftypelastoftypelastoftypesensearticlesectionletter{She had been working in a pub, cooking and waitressing.}\firstoftypeheadwordlastoftypefirstoftypelastoftypesubentryarticlesectionletter{wait}\firstoftypeheadwordlastoftypefirstoftypelastoftypesubentryarticlesectionletter{ress}\firstoftypeheadwordlastoftypefirstoftypelastoftypesubentryarticlesectionletter{ing}\examplefirstoftypelastoftypefirstoftypelastoftypesubentryarticlesectionletter{She does a bit of waitressing as a part-time job.}\firstoftypeheadwordlastoftypearticlesectionletter{waive}\firstoftypelastoftypepronunciationarticlesectionletter{w}\firstoftypelastoftypestressfirstoftypelastoftypepronunciationarticlesectionletter{eɪ}\firstoftypelastoftypepronunciationarticlesectionletter{v}\firstoftypevariantinflectionarticlesectionletter{waives}\section*{\needspace {8\baselineskip}{\variantinflectionarticlesectionletter{waiving}}}\section*{\needspace {8\baselineskip}{\lastoftypevariantinflectionarticlesectionletter{waived}}}\firstoftypesensearticlesectionletter{2.1}\firstoftypesensearticlesectionletter{1 }\firstoftypegrammarcategorylastoftypefirstoftypesensearticlesectionletter{Verb}\definitionfirstoftypelastoftypefirstoftypesensearticlesectionletter{If you }\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypefirstoftypesensearticlesectionletter{waive}\definitionfirstoftypelastoftypefirstoftypesensearticlesectionletter{ your right to something, for example legal representation, you choose not to have it or do it.}\exampleusefirstoftypelastoftypefirstoftypesensearticlesectionletter{V n}\examplefirstoftypelastoftypefirstoftypesensearticlesectionletter{He pleaded guilty to the murders of three boys and waived his right to appeal.}\lastoftypesensearticlesectionletter{2.2}\lastoftypesensearticlesectionletter{2 }\firstoftypegrammarcategorylastoftypelastoftypesensearticlesectionletter{Verb}\definitionfirstoftypelastoftypelastoftypesensearticlesectionletter{If someone }\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypelastoftypesensearticlesectionletter{waives}\definitionfirstoftypelastoftypelastoftypesensearticlesectionletter{ a rule, they say that people do not have to obey it in a particular situation.}\exampleusefirstoftypelastoftypelastoftypesensearticlesectionletter{V n}\examplefirstoftypelastoftypelastoftypesensearticlesectionletter{The art gallery waives admission charges on Sundays.}
+\sensearticlesectionletter{1.1}\sensearticlesectionletter{1 }\grammarcategoryfirstoftypesensearticlesectionletter{N-Count}\definitionfirstoftypesensearticlesectionletter{A }\wordusefirstoftypedefinitionfirstoftypesensearticlesectionletter{waitress}\definitionfirstoftypesensearticlesectionletter{ is a woman who works in a restaurant, serving people with food and drink.}\sensearticlesectionletter{1.2}\sensearticlesectionletter{2 }\grammarcategoryfirstoftypesensearticlesectionletter{Verb}\definitionfirstoftypesensearticlesectionletter{A woman who }\wordusefirstoftypedefinitionfirstoftypesensearticlesectionletter{waitresses}\definitionfirstoftypesensearticlesectionletter{ works in a restaurant serving food and drink.}\examplefirstoftypesensearticlesectionletter{She had been working in a pub, cooking and waitressing.}\grammarcategoryfirstoftypesensearticlesectionletter{Verb}\definitionfirstoftypesensearticlesectionletter{A woman who }\wordusefirstoftypedefinitionfirstoftypesensearticlesectionletter{waitresses}\definitionfirstoftypesensearticlesectionletter{ works in a restaurant serving food and drink.}\examplefirstoftypesensearticlesectionletter{She had been working in a pub, cooking and waitressing.}\grammarcategoryfirstoftypesensearticlesectionletter{Verb}\definitionfirstoftypesensearticlesectionletter{A woman who }\wordusefirstoftypedefinitionfirstoftypesensearticlesectionletter{waitresses}\definitionfirstoftypesensearticlesectionletter{ works in a restaurant serving food and drink.}\examplefirstoftypesensearticlesectionletter{She had been working in a pub, cooking and waitressing.}\headwordfirstoftypesubentryfirstoftypearticlesectionletter{wait}\headwordfirstoftypesubentryfirstoftypearticlesectionletter{ress}\headwordfirstoftypesubentryfirstoftypearticlesectionletter{ing}\examplefirstoftypesubentryfirstoftypearticlesectionletter{She does a bit of waitressing as a part-time job.}\headwordfirstoftypearticlesectionletter{waive}\pronunciationfirstoftypearticlesectionletter{w}\stressfirstoftypepronunciationfirstoftypearticlesectionletter{eɪ}\pronunciationfirstoftypearticlesectionletter{v}\section*{\needspace {8\baselineskip}{\variantinflectionarticlesectionletter{waives}}}\section*{\needspace {8\baselineskip}{\variantinflectionarticlesectionletter{waiving}}}\section*{\needspace {8\baselineskip}{\variantinflectionarticlesectionletter{waived}}}\sensearticlesectionletter{2.1}\sensearticlesectionletter{1 }\grammarcategoryfirstoftypesensearticlesectionletter{Verb}\definitionfirstoftypesensearticlesectionletter{If you }\wordusefirstoftypedefinitionfirstoftypesensearticlesectionletter{waive}\definitionfirstoftypesensearticlesectionletter{ your right to something, for example legal representation, you choose not to have it or do it.}\exampleusefirstoftypesensearticlesectionletter{V n}\examplefirstoftypesensearticlesectionletter{He pleaded guilty to the murders of three boys and waived his right to appeal.}\sensearticlesectionletter{2.2}\sensearticlesectionletter{2 }\grammarcategoryfirstoftypesensearticlesectionletter{Verb}\definitionfirstoftypesensearticlesectionletter{If someone }\wordusefirstoftypedefinitionfirstoftypesensearticlesectionletter{waives}\definitionfirstoftypesensearticlesectionletter{ a rule, they say that people do not have to obey it in a particular situation.}\exampleusefirstoftypesensearticlesectionletter{V n}\examplefirstoftypesensearticlesectionletter{The art gallery waives admission charges on Sundays.}
 
 \end{document}
