--- a/src/Test/XeLatex/TestFiles/Expected/multiClass.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/multiClass.tex
@@ -20,12 +20,10 @@
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
 \font\main="Times New Roman/GR" at 12pt
-\font\abcmain="Times New Roman/GR":color=ffa500 at 24pt
+\font\bamain="Times New Roman/GR":color=0000ff at 18pt
 \font\amain="Times New Roman/GR":color=0000ff at 18pt
 \font\bmain="Times New Roman/GR":color=ff0000 at 12pt
-\font\abenmain="Times New Roman/GR":color=0000ff at 18pt
-\font\abmain="Times New Roman/GR":color=0000ff at 18pt
-\font\acmain="Times New Roman/GR":color=ffa500 at 18pt
+\font\aenmain="Times New Roman/GR":color=0000ff at 18pt
 
 \mbox{} 
 \newpage 
@@ -34,16 +32,16 @@
 \pagenumbering{arabic} 
 \pagestyle{fancy} 
 
-\abcmain{sample text file b a c }
+\bamain{sample text file b a c }
 
 \amain{sample text file a }
 
 \bmain{sample text file b }
 
-\abenmain{sample text file a b }
+\aenmain{sample text file a b }
 
-\abmain{sample text file b a }
+\bmain{sample text file b a }
 
-\acmain{sample text file a c }
+\amain{sample text file a c }
 
 \end{document}
