TD-4771 Fixed testcases in linux

--- a/src/Test/XhtmlExport/TestFiles/Expected/NKOu3/NKOu3.tex
+++ b/src/Test/XhtmlExport/TestFiles/Expected/NKOu3/NKOu3.tex
@@ -142,52 +142,52 @@
 \font\spanvi="Charis SIL/GR" at 12pt
 \font\divzhCN="SimSun/GR" at 12pt
 \font\spanzhCN="SimSun/GR" at 12pt
-\font\picturepictureRight="Times New Roman/GR" at 12pt
-\font\imgpicturedivpictureLeft="Times New Roman/GR" at 12pt
-\font\scrBookscrBody="Times New Roman/GR" at 12pt
-\font\scrBookNamezxxscrBookscrBody="Times New Roman/GR/I" at 12pt
-\font\scrBookCodezxxscrBookscrBody="Times New Roman/GR/BI" at 12pt
-\font\TitleMainscrBookscrBody="Times New Roman/GR/B" at 22pt
-\font\TitleSecondaryzxxTitleMainscrBookscrBody="Times New Roman/GR/BI" at 16pt
-\font\spanzxxTitleMainscrBookscrBody="Times New Roman/GR/B" at 22pt
-\font\columnsscrBookscrBody="Times New Roman/GR" at 11pt
-\font\scrSectioncolumnsscrBookscrBody="Times New Roman/GR" at 11pt
-\font\SectionHeadscrSectioncolumnsscrBookscrBody="Times New Roman/GR/B" at 11pt
-\font\spanzxxSectionHeadscrSectioncolumnsscrBookscrBody="Times New Roman/GR/B" at 11pt
-\font\ParallelPassageReferencescrSectioncolumnsscrBookscrBody="Times New Roman/GR/I" at 11pt
-\font\spanzxxParallelPassageReferencescrSectioncolumnsscrBookscrBody="Times New Roman/GR/I" at 11pt
-\font\ParagraphscrSectioncolumnsscrBookscrBody="Times New Roman/GR" at 11pt
-\font\ChapterNumberzxxParagraphscrSectioncolumnsscrBookscrBody="Times New Roman/GR/B" at 27.5pt
-\font\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody="Times New Roman/GR" at 6pt
-\font\spanzxxParagraphscrSectioncolumnsscrBookscrBody="Times New Roman/GR" at 11pt
-\font\scrFootnoteMarkerParagraphscrSectioncolumnsscrBookscrBody="Times New Roman/GR" at 11pt
-\font\NoteGeneralParagraphParagraphscrSectioncolumnsscrBookscrBody="Times New Roman/GR" at 9pt
-\font\NoteTargetReferencezxxNoteGeneralParagraphParagraphscrSectioncolumnsscrBookscrBody="Times New Roman/GR/B" at 12pt
-\font\QuotedTextzxxNoteGeneralParagraphParagraphscrSectioncolumnsscrBookscrBody="Times New Roman/GR/I" at 9pt
-\font\spanzxxNoteGeneralParagraphParagraphscrSectioncolumnsscrBookscrBody="Times New Roman/GR" at 9pt
-\font\LinebscrSectioncolumnsscrBookscrBody="Times New Roman/GR" at 11pt
-\font\VerseNumberzxxLinebscrSectioncolumnsscrBookscrBody="Times New Roman/GR" at 6pt
-\font\spanzxxLinebscrSectioncolumnsscrBookscrBody="Times New Roman/GR" at 11pt
-\font\SeeInGlossaryzxxLinebscrSectioncolumnsscrBookscrBody="Times New Roman/GR":color=0000ff at 12pt
-\font\GlossaryKeySeeInGlossaryzxxLinebscrSectioncolumnsscrBookscrBody="Times New Roman/GR":color=0000ff at 12pt
-\font\LinecscrSectioncolumnsscrBookscrBody="Times New Roman/GR" at 11pt
-\font\spanzxxLinecscrSectioncolumnsscrBookscrBody="Times New Roman/GR" at 11pt
-\font\SeeInGlossaryzxxParagraphscrSectioncolumnsscrBookscrBody="Times New Roman/GR":color=0000ff at 12pt
-\font\GlossaryKeySeeInGlossaryzxxParagraphscrSectioncolumnsscrBookscrBody="Times New Roman/GR":color=0000ff at 12pt
-\font\picturePageParagraphscrSectioncolumnsscrBookscrBody="Times New Roman/GR" at 11pt
-\font\picturepicturePageParagraphscrSectioncolumnsscrBookscrBody="Times New Roman/GR" at 11pt
-\font\pictureCaptionpicturePageParagraphscrSectioncolumnsscrBookscrBody="Times New Roman/GR" at 11pt
-\font\spanzxxpictureCaptionpicturePageParagraphscrSectioncolumnsscrBookscrBody="Times New Roman/GR" at 11pt
-\font\referencezxxpictureCaptionpicturePageParagraphscrSectioncolumnsscrBookscrBody="Times New Roman/GR" at 11pt
-\font\pictureColumnParagraphscrSectioncolumnsscrBookscrBody="Times New Roman/GR" at 11pt
-\font\picturepictureColumnParagraphscrSectioncolumnsscrBookscrBody="Times New Roman/GR" at 11pt
-\font\pictureCaptionpictureColumnParagraphscrSectioncolumnsscrBookscrBody="Times New Roman/GR" at 11pt
-\font\spanzxxpictureCaptionpictureColumnParagraphscrSectioncolumnsscrBookscrBody="Times New Roman/GR" at 11pt
-\font\referencezxxpictureCaptionpictureColumnParagraphscrSectioncolumnsscrBookscrBody="Times New Roman/GR" at 11pt
-\font\ParagraphContinuationscrSectioncolumnsscrBookscrBody="Times New Roman/GR" at 11pt
-\font\VerseNumberzxxParagraphContinuationscrSectioncolumnsscrBookscrBody="Times New Roman/GR" at 6pt
-\font\spanzxxParagraphContinuationscrSectioncolumnsscrBookscrBody="Times New Roman/GR" at 11pt
-\font\AlternateReadingzxxNoteGeneralParagraphParagraphscrSectioncolumnsscrBookscrBody="Times New Roman/GR/I" at 12pt
+\font\picturepictureRight="Charis SIL/GR" at 12pt
+\font\imgpicturedivpictureLeft="Charis SIL/GR" at 12pt
+\font\scrBookscrBody="Charis SIL/GR" at 12pt
+\font\scrBookNamezxxscrBookscrBody="Charis SIL/GR/I" at 12pt
+\font\scrBookCodezxxscrBookscrBody="Charis SIL/GR/BI" at 12pt
+\font\TitleMainscrBookscrBody="Charis SIL/GR/B" at 22pt
+\font\TitleSecondaryzxxTitleMainscrBookscrBody="Charis SIL/GR/BI" at 16pt
+\font\spanzxxTitleMainscrBookscrBody="Charis SIL/GR/B" at 22pt
+\font\columnsscrBookscrBody="Charis SIL/GR" at 11pt
+\font\scrSectioncolumnsscrBookscrBody="Charis SIL/GR" at 11pt
+\font\SectionHeadscrSectioncolumnsscrBookscrBody="Charis SIL/GR/B" at 11pt
+\font\spanzxxSectionHeadscrSectioncolumnsscrBookscrBody="Charis SIL/GR/B" at 11pt
+\font\ParallelPassageReferencescrSectioncolumnsscrBookscrBody="Charis SIL/GR/I" at 11pt
+\font\spanzxxParallelPassageReferencescrSectioncolumnsscrBookscrBody="Charis SIL/GR/I" at 11pt
+\font\ParagraphscrSectioncolumnsscrBookscrBody="Charis SIL/GR" at 11pt
+\font\ChapterNumberzxxParagraphscrSectioncolumnsscrBookscrBody="Charis SIL/GR/B" at 27.5pt
+\font\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody="Charis SIL/GR" at 6pt
+\font\spanzxxParagraphscrSectioncolumnsscrBookscrBody="Charis SIL/GR" at 11pt
+\font\scrFootnoteMarkerParagraphscrSectioncolumnsscrBookscrBody="Charis SIL/GR" at 11pt
+\font\NoteGeneralParagraphParagraphscrSectioncolumnsscrBookscrBody="Charis SIL/GR" at 9pt
+\font\NoteTargetReferencezxxNoteGeneralParagraphParagraphscrSectioncolumnsscrBookscrBody="Charis SIL/GR/B" at 12pt
+\font\QuotedTextzxxNoteGeneralParagraphParagraphscrSectioncolumnsscrBookscrBody="Charis SIL/GR/I" at 9pt
+\font\spanzxxNoteGeneralParagraphParagraphscrSectioncolumnsscrBookscrBody="Charis SIL/GR" at 9pt
+\font\LinebscrSectioncolumnsscrBookscrBody="Charis SIL/GR" at 11pt
+\font\VerseNumberzxxLinebscrSectioncolumnsscrBookscrBody="Charis SIL/GR" at 6pt
+\font\spanzxxLinebscrSectioncolumnsscrBookscrBody="Charis SIL/GR" at 11pt
+\font\SeeInGlossaryzxxLinebscrSectioncolumnsscrBookscrBody="Charis SIL/GR":color=0000ff at 12pt
+\font\GlossaryKeySeeInGlossaryzxxLinebscrSectioncolumnsscrBookscrBody="Charis SIL/GR":color=0000ff at 12pt
+\font\LinecscrSectioncolumnsscrBookscrBody="Charis SIL/GR" at 11pt
+\font\spanzxxLinecscrSectioncolumnsscrBookscrBody="Charis SIL/GR" at 11pt
+\font\SeeInGlossaryzxxParagraphscrSectioncolumnsscrBookscrBody="Charis SIL/GR":color=0000ff at 12pt
+\font\GlossaryKeySeeInGlossaryzxxParagraphscrSectioncolumnsscrBookscrBody="Charis SIL/GR":color=0000ff at 12pt
+\font\picturePageParagraphscrSectioncolumnsscrBookscrBody="Charis SIL/GR" at 11pt
+\font\picturepicturePageParagraphscrSectioncolumnsscrBookscrBody="Charis SIL/GR" at 11pt
+\font\pictureCaptionpicturePageParagraphscrSectioncolumnsscrBookscrBody="Charis SIL/GR" at 11pt
+\font\spanzxxpictureCaptionpicturePageParagraphscrSectioncolumnsscrBookscrBody="Charis SIL/GR" at 11pt
+\font\referencezxxpictureCaptionpicturePageParagraphscrSectioncolumnsscrBookscrBody="Charis SIL/GR" at 11pt
+\font\pictureColumnParagraphscrSectioncolumnsscrBookscrBody="Charis SIL/GR" at 11pt
+\font\picturepictureColumnParagraphscrSectioncolumnsscrBookscrBody="Charis SIL/GR" at 11pt
+\font\pictureCaptionpictureColumnParagraphscrSectioncolumnsscrBookscrBody="Charis SIL/GR" at 11pt
+\font\spanzxxpictureCaptionpictureColumnParagraphscrSectioncolumnsscrBookscrBody="Charis SIL/GR" at 11pt
+\font\referencezxxpictureCaptionpictureColumnParagraphscrSectioncolumnsscrBookscrBody="Charis SIL/GR" at 11pt
+\font\ParagraphContinuationscrSectioncolumnsscrBookscrBody="Charis SIL/GR" at 11pt
+\font\VerseNumberzxxParagraphContinuationscrSectioncolumnsscrBookscrBody="Charis SIL/GR" at 6pt
+\font\spanzxxParagraphContinuationscrSectioncolumnsscrBookscrBody="Charis SIL/GR" at 11pt
+\font\AlternateReadingzxxNoteGeneralParagraphParagraphscrSectioncolumnsscrBookscrBody="Charis SIL/GR/I" at 12pt
 \color{black} 
 \AddToShipoutPicture*{% 
 \put(0,0){\rule{\paperwidth}{\paperheight}}{\includegraphics[width=\paperwidth, height=\paperheight]{cover.png}}% 
