--- a/src/Test/XhtmlExport/TestFiles/ExpectedLinux/Gondwana Sample/Gondwana Sample.tex
+++ b/src/Test/XhtmlExport/TestFiles/ExpectedLinux/Gondwana Sample/Gondwana Sample.tex
@@ -198,7 +198,7 @@
 \font\pFrontMatterdiv="Liberation Serif/B":color=000000 at 8pt 
 \vskip 60pt 
 \begin{center} 
-\CoverPageTitle{XelatexExport} 
+\CoverPageTitle{Gondwana Sample} 
 \end{center} 
 \newpage 
 \newpage 
@@ -206,9 +206,9 @@
 \mbox{} 
 \begin{titlepage}
 \begin{center}
-\textsc{\LARGE \CoverPageTitle{XelatexExport}}\\[1.5cm] 
+\textsc{\LARGE \CoverPageTitle{Gondwana Sample}}\\[1.5cm] 
 \vspace{110 mm} 
-\textsc{ \CoverPageTitle{XelatexPublisher}}\\[0.5cm] 
+\textsc{ \CoverPageTitle{Gondwana SamplePublisher}}\\[0.5cm] 
 \includegraphics[width=0.10 \textwidth]{./}\\[1cm]    
 \end{center} 
 \end{titlepage} 
