TD-4744 Fix Testcase failure

--- a/src/Test/XhtmlExport/TestFiles/Expected/Gondwana Sample/Gondwana Sample.tex
+++ b/src/Test/XhtmlExport/TestFiles/Expected/Gondwana Sample/Gondwana Sample.tex
@@ -140,8 +140,8 @@
 \font\spanurArab="Scheherazade Graphite Alpha/GR" at 12pt
 \font\divurxind="Times New Roman/GR" at 12pt
 \font\spanurxind="Times New Roman/GR" at 12pt
-\font\divur="Scheherazade Graphite Alpha/GR" at 12pt
-\font\spanur="Scheherazade Graphite Alpha/GR" at 12pt
+\font\divur="Scheherazade/GR" at 12pt
+\font\spanur="Scheherazade/GR" at 12pt
 \font\divvi="Charis SIL/GR" at 12pt
 \font\spanvi="Charis SIL/GR" at 12pt
 \font\divzhCNpinyin="Charis SIL/GR" at 12pt
