--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pathway (1.15.5)  experimental; urgency=high
+
+  * Daily Build
+
+ -- Greg Trihus <greg_trihus@sil.org>  Wed, 11 Jan 2017 14:44:20 -0600
+
 pathway (1.15.4)  experimental; urgency=high
 
   * CSS:TD-4688 Akoose bullets are duplicated
